# fuzion-music

./: README.md  bun.lockb  components.json  index.html  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
src/: app.css  app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/misc/main/: main.tsx
src/components/misc/playing/: playing.tsx
src/components/misc/sidebar/: download.tsx  search.tsx  sidebar.tsx
src/components/ui/: range.tsx  sonner.tsx  table.tsx  toggle.tsx
src/lib/: songs.ts  store.ts  transitions.ts  utils.ts
